Bug 497596 - Panel becomes a separate, interactable application after focus shortcut in Plasma 6.2+ on X11
Summary: Panel becomes a separate, interactable application after focus shortcut in Pl...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-12-17 09:27 UTC by matiyukv41
Modified: 2025-01-24 23:09 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments
Both panels are displayed as individual 'plasmashell' instances in the task switcher (104.49 KB, image/png)
2024-12-17 09:27 UTC, matiyukv41
Details

Note You need to log in before you can comment on or make changes to this bug.
Description matiyukv41 2024-12-17 09:27:24 UTC
Created attachment 176705 [details]
Both panels are displayed as individual 'plasmashell' instances in the task switcher

SUMMARY

Panel turns into a separate application and can be overlapped by other windows after being focused via shortcut in KDE Plasma 6.2+

STEPS TO REPRODUCE
1. Open Panel settings.
2. Set a shortcut for "Focus" (e.g., Ctrl+Alt+\[ in my case).
3. Close the settings.
4. Press the assigned shortcut to focus the panel.

OBSERVED RESULT

After pressing the shortcut:
- The panel turns into a separate application, as can be seen in the task manager/window switcher (it gets its own icon and entry).
- The panel can be overlapped by other application windows. This makes the panel inactive and unusable until it's selected via Task Switcher.
- Restarting the `plasmashell` process temporarily resolves the issue until the shortcut is pressed again.
- The panel keeps this incorrect behavior until a system reboot, or manual kill of the "plasmashell" process as mentioned before.

EXPECTED RESULT

The panel should be focused after pressing the shortcut but should remain a normal panel, not a separate application. It should behave as a panel, not like a regular window.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 6.2.4
KDE Frameworks Version: 6.9.0
Qt Version: 6.8.1
Kernel Version: 6.12.4-arch1-1 (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
- Processors: 8 × 11th Gen Intel® Core™ i5-1135G7 @ 2.40GHz
- Memory: 7.6 GiB of RAM
- Graphics Processor: Mesa Intel® Iris® Xe Graphics
- The problem started appearing approximately in KDE Plasma 6.2 and is still present in 6.2.4.
- I was unable to find a similar bug report on the bug tracker or forum.
- Screenshots attached to demonstrate the issue.
Comment 1 Nate Graham 2024-12-17 18:09:32 UTC
Does this happen on Wayland too, or only on X11? I can't reproduce it on Wayland.
Comment 2 matiyukv41 2024-12-19 17:16:04 UTC
(In reply to Nate Graham from comment #1)
> Does this happen on Wayland too, or only on X11? I can't reproduce it on
> Wayland.

Only X11, there is no issue on Weyland
Comment 3 Bug Janitor Service 2025-01-03 03:47:36 UTC
🐛🧹 ⚠️ This bug has been in NEEDSINFO status with no change for at least 15 days. Please provide the requested information, then set the bug status to REPORTED. If there is no change for at least 30 days, it will be automatically closed as RESOLVED WORKSFORME.

For more information about our bug triaging procedures, please read https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging.

Thank you for helping us make KDE software even better for everyone!
Comment 4 Marco Martin 2025-01-21 14:53:03 UTC
can reproduce
Comment 5 Bug Janitor Service 2025-01-21 15:13:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5098
Comment 6 Marco Martin 2025-01-22 15:58:09 UTC
Git commit 3c876b3d320f9cf2ecba0e4addddd73f65618080 by Marco Martin.
Committed on 22/01/2025 at 15:57.
Pushed by mart into branch 'master'.

panel: explicitly SkipSwitcher and KeepAbove after losing focus

after the panel was given focus via the keyboard shortcut, it becomes
visible from the task switcher and can be covered by other windows,
when running on x11 explicitly set the states to both skip the task
switcher and to stay above the other windows

M  +6    -1    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/3c876b3d320f9cf2ecba0e4addddd73f65618080
Comment 7 Marco Martin 2025-01-22 15:59:06 UTC
Git commit cdec5f942757d8df4c10ed7928cdb31da46335b6 by Marco Martin.
Committed on 22/01/2025 at 15:58.
Pushed by mart into branch 'Plasma/6.3'.

panel: explicitly SkipSwitcher and KeepAbove after losing focus

after the panel was given focus via the keyboard shortcut, it becomes
visible from the task switcher and can be covered by other windows,
when running on x11 explicitly set the states to both skip the task
switcher and to stay above the other windows


(cherry picked from commit 3c876b3d320f9cf2ecba0e4addddd73f65618080)

3c876b3d panel: explicitly SkipSwitcher and KeepAbove after losing focus

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +6    -1    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/cdec5f942757d8df4c10ed7928cdb31da46335b6