panel: explicitly SkipSwitcher and KeepAbove after losing focus

after the panel was given focus via the keyboard shortcut, it becomes
visible from the task switcher and can be covered by other windows,
when running on x11 explicitly set the states to both skip the task
switcher and to stay above the other windows

BUG:497596